# Llm_Evaluate

./: README.md  pyproject.toml
configs/: demo_hf_qna.yaml  demo_local.yaml  demo_local_transformers_qwen3_squad.yaml  demo_multi_dataset.yaml  mmlu_pro_local.yaml
docs/: configuration.md  custom_dataset.md
examples/data/: custom_eval.jsonl  template_math_zh.jsonl  template_qa_en.jsonl  template_vlm_cn.jsonl
scripts/: serve_sglang_qwen3_4b.sh  serve_vllm_qwen3_4b.sh
src/llm_evaluate/: config.py
src/llm_evaluate/cli/: app.py
src/llm_evaluate/data/: loaders.py  schema.py
src/llm_evaluate/eval/: runner.py
src/llm_evaluate/metrics/: manager.py  text_metrics.py
src/llm_evaluate/models/: base.py  factory.py  openai_compatible_adapter.py  sglang_adapter.py  transformers_adapter.py  vllm_adapter.py
src/llm_evaluate/templates/: custom_dataset_template.jsonl
tests/: test_config_and_loader.py  test_metrics.py  test_transformers_adapter.py
